--- a/python nlp/lesson2.ipynb
+++ b/python nlp/lesson2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('I', 'PRP'), ('am', 'VBP'), ('honored', 'VBN'), ('to', 'TO'), ('be', 'VB'), ('with', 'IN'), ('you', 'PRP'), ('today', 'NN'), ('at', 'IN'), ('your', 'PRP$'), ('commencement', 'NN'), ('from', 'IN'), ('one', 'CD'), ('of', 'IN'), ('the', 'DT'), ('finest', 'JJS'), ('universities', 'NNS'), ('in', 'IN'), ('the', 'DT'), ('world', 'NN'), ('.', '.')]\n"
+     ]
+    }
+   ],
    "source": [
     "sentences = sent_tokenize(text)\n",
     "\n",
@@ -57,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'be', 'honor', 'to', 'be', 'with', 'you', 'today', 'at', 'your', 'commencement', 'from', 'one', 'of', 'the', 'fine', 'university', 'in', 'the', 'world', '.']\n"
+     ]
+    }
+   ],
    "source": [
     "from nltk.corpus import wordnet\n",
     "from nltk.stem import WordNetLemmatizer\n",
@@ -92,9 +108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(ORGANIZATION Reed/NNP College/NNP)\n",
+      "(ORGANIZATION Mac/NNP)\n"
+     ]
+    }
+   ],
    "source": [
     "def regognizeNamedEntities(sentences_list_with_pos_tags):\n",
     "    sentences = []\n",
